--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,9 @@
-version: '3.8'
-
 services:
   bot:
     build: .
     container_name: telegram_shop_bot
     restart: always
+    network_mode: host
     env_file:
       - .env
     volumes:
