--- a/dist_pyc/.env.example
+++ b/dist_pyc/.env.example
@@ -14,6 +14,10 @@ ADMIN_IDS=123456789,987654321
 # === SEPAY - NẠP TIỀN TỰ ĐỘNG ===
 # Lấy token tại: sepay.vn → Cài đặt → API
 SEPAY_API_TOKEN=your_sepay_api_token
+# Giới hạn transaction mỗi lần poll (mặc định nội bộ: 200 nếu để trống)
+SEPAY_LIMIT=200
+# Fallback limit khi SEPAY_LIMIT không đặt (nên giữ 200)
+SEPAY_DEFAULT_LIMIT=200
 
 # Thông tin ngân hàng nhận tiền
 SEPAY_BANK_NAME=MBBank
